gs/src/gdevpdtt.c
@@ -35,6 +35,7 @@
 #include "gxstate.h"		
 #include "gdevpdfx.h"
 #include "gdevpdfg.h"
+#include "gdevpdfo.h"
 #include "gdevpdtx.h"
 #include "gdevpdtd.h"
 #include "gdevpdtf.h"
@@ -989,6 +990,9 @@ pdf_make_font3_resource(gx_device_pdf *pdev, gs_font *font,
     pdfont->u.simple.s.type3.FontBBox.q.x = (int)ceil(bfont->FontBBox.q.x);
     pdfont->u.simple.s.type3.FontBBox.q.y = (int)ceil(bfont->FontBBox.q.y);
     pdfont->u.simple.s.type3.FontMatrix = bfont->FontMatrix;
+    pdfont->u.simple.s.type3.Resources = cos_dict_alloc(pdev, "pdf_make_font3_resource");
+    if (pdfont->u.simple.s.type3.Resources == NULL)
+	return_error(gs_error_VMerror);
     /* Adobe viewers have a precision problem with small font matrices : */
     while (any_abs(pdfont->u.simple.s.type3.FontMatrix.xx) < 0.001 &&
 	   any_abs(pdfont->u.simple.s.type3.FontMatrix.xy) < 0.001 &&
